@@ -4,4 +4,3 @@
  * Support board number epochs
  * gsalliere
  * check movements
- * localpoints
